; ModuleID = '/home/carl/AnghaBench/vlc/modules/services_discovery/extr_xcb_apps.c_vlc_sd_probe_Open.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/services_discovery/extr_xcb_apps.c_vlc_sd_probe_Open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"x11-display\00", align 1
@VLC_PROBE_CONTINUE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"xcb_apps\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"Screen capture\00", align 1
@SD_CAT_DEVICES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlc_sd_probe_Open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_sd_probe_Open(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i8* @var_InheritString(i32* %8, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  store i8* %9, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32* @xcb_connect(i8* %10, i32* null)
  store i32* %11, i32** %6, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @free(i8* %12)
  %14 = load i32*, i32** %6, align 8
  %15 = call i64 @xcb_connection_has_error(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %1
  %18 = load i32, i32* @VLC_PROBE_CONTINUE, align 4
  store i32 %18, i32* %2, align 4
  br label %26

19:                                               ; preds = %1
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @xcb_disconnect(i32* %20)
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @N_(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %24 = load i32, i32* @SD_CAT_DEVICES, align 4
  %25 = call i32 @vlc_sd_probe_Add(i32* %22, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %23, i32 %24)
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %19, %17
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i8* @var_InheritString(i32*, i8*) #1

declare dso_local i32* @xcb_connect(i8*, i32*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i64 @xcb_connection_has_error(i32*) #1

declare dso_local i32 @xcb_disconnect(i32*) #1

declare dso_local i32 @vlc_sd_probe_Add(i32*, i8*, i32, i32) #1

declare dso_local i32 @N_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
